# agate-charts

./: .gitignore  AUTHORS  AUTHORS.rst  CHANGELOG  CHANGELOG.rst  MANIFEST.in  README  README.rst  example.py  heights.csv  pyproject.toml  requirements-rtfd.txt  requirements.txt  samples.py  setup.cfg  setup.py
.github/workflows/: ci.yml
agatecharts/: __init__.py  colors.py  table.py  tableset.py  utils.py
agatecharts/charts/: __init__.py  bars.py  base.py  columns.py  lines.py  scatter.py
docs/: Makefile  api.rst  conf.py  index.rst  install.rst  samples.rst  tutorial.rst
docs/api/: charts.rst  table.rst  tableset.rst
examples/: epa-emissions-20150910.csv
fever/: __init__.py  bars.py  base.py  colors.py  columns.py  lines.py  scatter.py  table.py  tableset.py
fever/charts/: __init__.py  bars.py  base.py  columns.py  lines.py  scatter.py
tests/: __init__.py  test_bar.py  test_column.py  test_line.py  test_scatter.py
way/: __init__.py  bar.py  bars.py  base.py  colors.py  column.py  columns.py  line.py  lines.py  monkey_patch.py  scatter.py  table.py
